--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "Chrome Extension with React & Webpack",
-  "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
+  "name": "Fifa 22 Score Extension",
+  "description": "A Fifa score extension that gives you the schedule and scores of Fifa Matches",
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
   "action": {
