--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@hot-loader/react-dom": "^17.0.2",
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
+    "dayjs": "^1.11.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
